--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
 
       - run: npm install
-      - run: npm run build
+      - run: npm run build-ghpages
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
