--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npx eleventy",
     "serve": "npx eleventy --serve",
-    "build-ghpages": "npx @11ty/eleventy --pathprefix=/my-ai-guides/"
+    "build-ghpages": "npx @11ty/eleventy --pathprefix 'my-ai-guides'"
   },
   "keywords": [],
   "author": "",
